Update upcoming page

--- a/cmd/webserver/templates/upcoming.gohtml
+++ b/cmd/webserver/templates/upcoming.gohtml
@@ -42,6 +42,7 @@
                             <th scope="col">Followers</th>
                             <th scope="col">Type</th>
                             <th scope="col">Price</th>
+                            <th scope="col">Date</th>
                             <th scope="col"></th>
                         </tr>
                         </thead>
