--- a/cmd/webserver/templates/achievements.gohtml
+++ b/cmd/webserver/templates/achievements.gohtml
@@ -5,9 +5,27 @@
     <div class="container" id="achievements-page">
 
         <div class="jumbotron">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
 
-            <h1><i class="fas fa-trophy"></i> Achievements</h1>
+                    <h1><i class="fas fa-trophy"></i> Achievements</h1>
 
+                </div>
+                <div class="col-sm-12 col-lg-6">
+
+                    <div class="input-group input-group-lg mt-1 mb-2">
+                        <input class="form-control" type="search" name="search" placeholder="Search for a Game" id="search" autofocus>
+                        <div class="input-group-append">
+                            <input type="submit" value="Search" class="input-group-text">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-12">
+                    <p class="lead">The apps with the most achievements.</p>
+                </div>
+
+            </div>
         </div>
 
         {{ template "_flashes" . }}
