--- a/cmd/webserver/templates/achievements.gohtml
+++ b/cmd/webserver/templates/achievements.gohtml
@@ -39,7 +39,7 @@
                         <thead class="thead-light">
                         <tr>
                             <th scope="col">App</th>
-                            <th scope="col">Count</th>
+                            <th scope="col">Achievements</th>
                             <th scope="col" nowrap="nowrap">Avg Completion</th>
                             <th scope="col">Price</th>
                             <th scope="col">Icons</th>
