--- a/cmd/webserver/templates/package.gohtml
+++ b/cmd/webserver/templates/package.gohtml
@@ -246,18 +246,8 @@
 
                                 <ul class="nav nav-tabs card-header-tabs" role="tablist">
                                     <li class="nav-item">
-                                        <a class="nav-link active" data-toggle="tab" href="#dev-details" role="tab">Details</a>
+                                        <a class="nav-link active" data-toggle="tab" href="#dev-info" role="tab">Info</a>
                                     </li>
-                                    {{if gt (len .Extended) 0}}
-                                        <li class="nav-item">
-                                            <a class="nav-link" data-toggle="tab" href="#dev-extended" role="tab">Extended Values ({{ len .Extended }})</a>
-                                        </li>
-                                    {{ end }}
-                                    {{if gt (len .Controller) 0}}
-                                        <li class="nav-item">
-                                            <a class="nav-link" data-toggle="tab" href="#dev-controller" role="tab">Controller Values ({{ len .Controller }})</a>
-                                        </li>
-                                    {{ end }}
                                     {{if gt (len .DepotIDs) 0}}
                                         <li class="nav-item">
                                             <a class="nav-link" data-toggle="tab" href="#dev-depots" role="tab">Depots ({{ len .DepotIDs }})</a>
@@ -269,69 +259,44 @@
                             <div class="card-body">
                                 <div class="tab-content" id="tab-content-dev">
 
-                                    {{/* Details */}}
-                                    <div class="tab-pane show active" id="dev-details" role="tabpanel">
+                                    {{/* Info */}}
+                                    <div class="tab-pane show active" id="dev-info" role="tabpanel">
 
                                         <div class="table-responsive">
                                             <table class="table table-hover table-striped table-datatable mb-0" data-order='[[0, "asc"]]'>
                                                 <thead class="thead-light">
                                                 <tr>
                                                     <th scope="col">Key</th>
+                                                    <th scope="col" class="thin">Section</th>
                                                     <th scope="col">Value</th>
                                                 </tr>
                                                 </thead>
+                                                <tbody>
                                                 <tr>
-                                                    <th scope="row" nowrap="nowrap" class="thin">Updated on Steam</th>
+                                                    <td class="thin">updated_steam</td>
+                                                    <td>Other</td>
                                                     <td>{{ .Package.GetPICSUpdatedNice }}</td>
                                                 </tr>
                                                 <tr>
-                                                    <th scope="row" nowrap="nowrap" class="thin">Updated on Game DB</th>
+                                                    <td class="thin">updated_game_db</td>
+                                                    <td>Other</td>
                                                     <td>{{ .Package.GetUpdatedNice }}</td>
                                                 </tr>
-                                            </table>
-                                        </div>
-
-                                    </div>
-
-                                    {{/* Extended */}}
-                                    <div class="tab-pane" id="dev-extended" role="tabpanel">
-
-                                        <div class="table-responsive">
-                                            <table class="table table-hover table-striped table-datatable mb-0" data-order='[[0, "asc"]]'>
-                                                <thead class="thead-light">
-                                                <tr>
-                                                    <th scope="col">Key</th>
-                                                    <th scope="col">Value</th>
-                                                </tr>
-                                                </thead>
                                                 {{ range .Extended }}
                                                     <tr>
                                                         <td><a href="/product-keys?type=package&key={{ .Key }}&value={{ .Value }}">{{ .Key }}</a></td>
+                                                        <td>Extended</td>
                                                         <td class="{{ .TDClass }}">{{ .ValueFormatted }}</td>
                                                     </tr>
                                                 {{ end }}
-                                            </table>
-                                        </div>
-
-                                    </div>
-
-                                    {{/* Controller */}}
-                                    <div class="tab-pane" id="dev-controller" role="tabpanel">
-
-                                        <div class="table-responsive">
-                                            <table class="table table-hover table-striped table-datatable mb-0" data-order='[[0, "asc"]]'>
-                                                <thead class="thead-light">
-                                                <tr>
-                                                    <th scope="col">Key</th>
-                                                    <th scope="col">Value</th>
-                                                </tr>
-                                                </thead>
                                                 {{ range $key, $value := .Controller }}
                                                     <tr>
                                                         <td>{{ $key }}</td>
+                                                        <td>Controller</td>
                                                         <td>{{ $value }}</td>
                                                     </tr>
                                                 {{ end }}
+                                                </tbody>
                                             </table>
                                         </div>
 
