--- a/cmd/webserver/templates/new_releases.gohtml
+++ b/cmd/webserver/templates/new_releases.gohtml
@@ -4,10 +4,27 @@
     <div class="container" id="new-releases-page">
 
         <div class="jumbotron">
+            <div class="row">
+                <div class="col-sm-12 col-lg-6">
 
-            <h1><i class="fas fa-hourglass-end"></i> New Releases</h1>
-            <p class="lead">The {{ comma .Apps }} apps released in the last {{ comma .Days }} days.</p>
+                    <h1><i class="fas fa-hourglass-end"></i> New Releases</h1>
 
+                </div>
+                <div class="col-sm-12 col-lg-6">
+
+                    <div class="input-group input-group-lg mt-1 mb-2">
+                        <input class="form-control" type="search" name="search" placeholder="Search for a Game" id="search" autofocus>
+                        <div class="input-group-append">
+                            <input type="submit" value="Search" class="input-group-text">
+                        </div>
+                    </div>
+
+                </div>
+                <div class="col-12">
+                    <p class="lead">The {{ comma .Apps }} apps released in the last {{ comma .Days }} days.</p>
+                </div>
+
+            </div>
         </div>
 
         {{ template "_flashes" . }}
