--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -26,7 +26,7 @@
                         <a href="/apps?types=game&price-low=0.00&price-high=0.00">Free Games</a>,
                         <a href="/apps?platforms=linux">Linux Games</a>,
                         <a href="/apps?developers=3589">Valve Games</a>,
-                        <a href="/apps?tags=5153">Kickstarted Games</a>
+                        <a href="/apps?tags=5153">Kickstarted Games</a>,
                         <a href="/apps?types=music">Soundtracks</a>
                     </small>
                 </div>
