Add currency message

--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -255,6 +255,7 @@
                                     </a>
                                 {{ end }}
                             {{ end }}
+                            <span class="dropdown-item">The rest coming soon.</span>
                         </div>
                     </li>
 
