Move ad switch to template

--- a/cmd/webserver/templates/_footer.gohtml
+++ b/cmd/webserver/templates/_footer.gohtml
@@ -81,15 +81,15 @@
     {{ end }}
 
     {{ if .ShowAds }}
-        <!--suppress ES6ConvertVarToLetConst -->
-        <script>
-            $('small.small-print').css('margin-bottom', '140px');
+{{/*        <!--suppress ES6ConvertVarToLetConst -->*/}}
+{{/*        <script>*/}}
+{{/*            $('small.small-print').css('margin-bottom', '140px');*/}}
 
-            // Must be vars
-            var infolinks_pid = 3185749;
-            var infolinks_wsid = 0;
-        </script>
-        <script src="https://resources.infolinks.com/js/infolinks_main.js"></script>
+{{/*            // Must be vars*/}}
+{{/*            var infolinks_pid = 3185749;*/}}
+{{/*            var infolinks_wsid = 0;*/}}
+{{/*        </script>*/}}
+{{/*        <script src="https://resources.infolinks.com/js/infolinks_main.js"></script>*/}}
     {{ end }}
 
     </body>
