Fix stats template

--- a/cmd/webserver/templates/stats.gohtml
+++ b/cmd/webserver/templates/stats.gohtml
@@ -15,7 +15,7 @@
 
                 <div class="row">
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
-                        <a href="/apps" role="button" class="btn btn-success btn-block mb-0">Total Apps<br/>{{ comma .AppsCount}}</a>
+                        <a href="/apps" role="button" class="btn btn-success btn-block mb-0">Total Apps<br/>{{ comma64 .AppsCount}}</a>
                     </div>
                     <div class="col-12 col-sm-6 col-lg-4 col-xl mb-4">
                         <a href="/packages" role="button" class="btn btn-success btn-block mb-0">Total Packages<br/>{{ comma .PackagesCount}}</a>
