--- a/cmd/webserver/templates/signup.gohtml
+++ b/cmd/webserver/templates/signup.gohtml
@@ -7,6 +7,7 @@
 
         <div class="jumbotron">
             <h1><i class="fas fa-key"></i> Signup</h1>
+            <p class="lead">Signup to highlight apps you own, groups you are in etc</p>
         </div>
 
         {{ template "_flashes" . }}
