Get app types from db

--- a/cmd/webserver/templates/apps.gohtml
+++ b/cmd/webserver/templates/apps.gohtml
@@ -87,7 +87,7 @@
                             <label for="types">Type</label>
                             <select multiple data-placeholder="Choose Types" class="form-control form-control-chosen" id="types" name="types">
                                 {{ range $key, $value := .Types }}
-                                    <option value="{{ .ID }}">{{ .Name }}</option>
+                                    <option value="{{ .Type }}">{{ .Format }}</option>
                                 {{ end }}
                             </select>
                         </div>
