--- a/cmd/webserver/templates/chat_bot.gohtml
+++ b/cmd/webserver/templates/chat_bot.gohtml
@@ -7,7 +7,7 @@
             <a href="{{ .Link }}" target="_blank">
                 <img src="/assets/img/discord.png" class="float-right" alt="Add chat bot to your server" title="Add chat bot to your server">
             </a>
-            <h1><i class="fas fa-robot"></i> Steam Chat Bot <small>(BETA)</small></h1>
+            <h1><i class="fas fa-robot"></i> Steam Chat Bot</h1>
             <p class="lead"><a href="{{ .Link }}" target="_blank">Add the Steam Chat Bot to your Discord server</a>.</p>
             <small>Used on {{ .Guilds }}+ servers so far.</small>
         </div>
