--- a/cmd/webserver/templates/sales.gohtml
+++ b/cmd/webserver/templates/sales.gohtml
@@ -7,7 +7,7 @@
             <div class="row">
                 <div class="col-sm-12 col-lg-6">
 
-                    <h1><i class="fas fa-piggy-bank"></i> Sales <small>(beta)</small></h1>
+                    <h1><i class="fas fa-piggy-bank"></i> Sales <small>(BETA)</small></h1>
 
                 </div>
                 <div class="col-sm-12 col-lg-6">
