Fix bundle name

--- a/cmd/webserver/templates/package.gohtml
+++ b/cmd/webserver/templates/package.gohtml
@@ -177,8 +177,8 @@
                                     <tr data-link="{{.GetPath}}">
                                         <td data-app-id="{{ .ID }}" class="img">
                                             <div class="icon-name">
-                                                <div class="icon"><img src="/assets/img/no-app-image-square.jpg" alt="{{.Name}}"></div>
-                                                <div class="name">{{ .Name }}</div>
+                                                <div class="icon"><img src="/assets/img/no-app-image-square.jpg" alt="{{.GetName }}"></div>
+                                                <div class="name">{{ .GetName }}</div>
                                             </div>
                                         </td>
                                         <td>{{ .Discount }}%</td>
