--- a/cmd/webserver/templates/_header.gohtml
+++ b/cmd/webserver/templates/_header.gohtml
@@ -135,7 +135,7 @@
                             <a class="dropdown-item" href="/packages">Packages</a>
                             <a class="dropdown-item" href="/bundles">Bundles</a>
                             <a class="dropdown-item" href="/price-changes">Price Changes</a>
-                            <a class="dropdown-item" href="/changes">Product Changes</a>
+                            <a class="dropdown-item" href="/changes">Library Changes</a>
 
                             <div class="dropdown-divider"></div>
 
