Switch images to webp

--- a/cmd/webserver/assets/sass/_avatars.scss
+++ b/cmd/webserver/assets/sass/_avatars.scss
@@ -7,199 +7,199 @@
 }
 
 .avatar2.lvl_100 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_hexagons.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_hexagons.png&output=webp)
 }
 
 .avatar2.lvl_200 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shields.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shields.png&output=webp)
 }
 
 .avatar2.lvl_300 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_books.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_books.png&output=webp)
 }
 
 .avatar2.lvl_400 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_chevrons.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_chevrons.png&output=webp)
 }
 
 .avatar2.lvl_500 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_circle2.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_circle2.png&output=webp)
 }
 
 .avatar2.lvl_600 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_angle.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_angle.png&output=webp)
 }
 
 .avatar2.lvl_700 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_flag.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_flag.png&output=webp)
 }
 
 .avatar2.lvl_800 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_wings.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_wings.png&output=webp)
 }
 
 .avatar2.lvl_900 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_arrows.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_arrows.png&output=webp)
 }
 
 .avatar2.lvl_1000 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_crystals.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_crystals.png&output=webp)
 }
 
 .avatar2.lvl_1100 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_space.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_space.png&output=webp)
 }
 
 .avatar2.lvl_1200 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_waterelement.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_waterelement.png&output=webp)
 }
 
 .avatar2.lvl_1300 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_fireelement.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_fireelement.png&output=webp)
 }
 
 .avatar2.lvl_1400 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_earthelement.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_earthelement.png&output=webp)
 }
 
 .avatar2.lvl_1500 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_1-2.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_1-2.png&output=webp)
 }
 
 .avatar2.lvl_1600 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_3-4.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_3-4.png&output=webp)
 }
 
 .avatar2.lvl_1700 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_5-6.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_5-6.png&output=webp)
 }
 
 .avatar2.lvl_1800 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_7-8.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_7-8.png&output=webp)
 }
 
 .avatar2.lvl_1900 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_9-10.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_airelement_9-10.png&output=webp)
 }
 
 .avatar2.lvl_2000 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_1-2.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_1-2.png&output=webp)
 }
 
 .avatar2.lvl_2100 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_3-4.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_3-4.png&output=webp)
 }
 
 .avatar2.lvl_2200 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_5-6.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_5-6.png&output=webp)
 }
 
 .avatar2.lvl_2300 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_7-8.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_7-8.png&output=webp)
 }
 
 .avatar2.lvl_2400 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_9-10.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_geo_9-10.png&output=webp)
 }
 
 .avatar2.lvl_2500 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_1-2.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_1-2.png&output=webp)
 }
 
 .avatar2.lvl_2600 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_3-4.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_3-4.png&output=webp)
 }
 
 .avatar2.lvl_2700 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_5-6.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_5-6.png&output=webp)
 }
 
 .avatar2.lvl_2800 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_7-8.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_7-8.png&output=webp)
 }
 
 .avatar2.lvl_2900 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_9-10.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_mandala_9-10.png&output=webp)
 }
 
 .avatar2.lvl_3000 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_1-2.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_1-2.png&output=webp)
 }
 
 .avatar2.lvl_3100 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_3-4.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_3-4.png&output=webp)
 }
 
 .avatar2.lvl_3200 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_5-6.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_5-6.png&output=webp)
 }
 
 .avatar2.lvl_3300 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_7-8.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_7-8.png&output=webp)
 }
 
 .avatar2.lvl_3400 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_9-10.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_spiro_9-10.png&output=webp)
 }
 
 .avatar2.lvl_3500 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_1-2.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_1-2.png&output=webp)
 }
 
 .avatar2.lvl_3600 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_3-4.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_3-4.png&output=webp)
 }
 
 .avatar2.lvl_3700 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_5-6.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_5-6.png&output=webp)
 }
 
 .avatar2.lvl_3800 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_7-8.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_7-8.png&output=webp)
 }
 
 .avatar2.lvl_3900 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_9-10.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_patterns_9-10.png&output=webp)
 }
 
 .avatar2.lvl_4000 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_1.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_1.png&output=webp)
 }
 
 .avatar2.lvl_4100 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_2.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_2.png&output=webp)
 }
 
 .avatar2.lvl_4200 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_3.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_3.png&output=webp)
 }
 
 .avatar2.lvl_4300 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_4.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_4.png&output=webp)
 }
 
 .avatar2.lvl_4400 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_5.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_shapes_5.png&output=webp)
 }
 
 .avatar2.lvl_4500 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_1.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_1.png&output=webp)
 }
 
 .avatar2.lvl_4600 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_2.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_2.png&output=webp)
 }
 
 .avatar2.lvl_4700 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_3.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_3.png&output=webp)
 }
 
 .avatar2.lvl_4800 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_4.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_4.png&output=webp)
 }
 
 .avatar2.lvl_4900 {
-    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_5.png)
+    background-image: url(https://images.weserv.nl/?url=https://steamcommunity-a.akamaihd.net/public/shared/images/community/levels_grunge_5.png&output=webp)
 }
 
 .avatar2.lvl_plus_10 {
