--- a/cmd/webserver/templates/new_releases.gohtml
+++ b/cmd/webserver/templates/new_releases.gohtml
@@ -21,7 +21,7 @@
 
                 </div>
                 <div class="col-12">
-                    <p class="lead">The {{ comma .Apps }} apps released in the last {{ comma .Days }} days.</p>
+                    <p class="lead">The {{ comma64 .Apps }} apps released in the last {{ comma .Days }} days.</p>
                 </div>
 
             </div>
