--- a/cmd/webserver/templates/app.gohtml
+++ b/cmd/webserver/templates/app.gohtml
@@ -793,7 +793,7 @@
 
                             <div id="images">
                                 {{ range $key, $value := .App.Screenshots }}
-                                    <img src="" data-lazy="{{ .PathFull }}" alt="" data-lazy-alt="Media {{ $key }}">
+                                    <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1920 1080"%3E%3C/svg%3E' data-lazy="{{ .PathFull }}" alt="" data-lazy-alt="Media {{ $key }}">
                                 {{ end }}
                             </div>
 
