--- a/cmd/webserver/templates/home.gohtml
+++ b/cmd/webserver/templates/home.gohtml
@@ -161,7 +161,7 @@
                     <div class="card-body p-0">
                         {{ range $key, $value := .Games }}
                             <a href="{{ .GetPath }}">
-                                <img src="" data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="" data-lazy-alt="{{ .GetName }}">
+                                <img src='data:image/svg+xml,%3Csvg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 460 215"%3E%3C/svg%3E' data-lazy="https://images.weserv.nl/?url={{ .GetHeaderImage }}&output=webp" alt="" data-lazy-alt="{{ .GetName }}">
                             </a>
                         {{ end }}
                     </div>
